--- a/css/main.css
+++ b/css/main.css
@@ -28,11 +28,11 @@ nav ol {
   list-style-type: none;
 }
 nav a {
-  color: #793284
+  color: #793284;
   text-decoration: none;
 }
 nav a:hover {
-  color: #b42885
+  color: #b42885;
   text-decoration: underline;
 }
 .intro {
